...
                                Icons.account_circle,
                                size: 100,
                                color: Color.fromARGB(255, 187, 148, 48),
                              ),
                      ),
                      IconButton(
                        key:Key("profile_image_upload"),
                        icon: Icon(Icons.camera_alt_outlined,
                            size: 20, color: Color.fromARGB(255, 217, 148, 48)),
                        onPressed: () {
                          profileSelected = true;
                          BlocProvider.of<ImageBloc>(context)
                              .add(ProfileClicked());
...
                      LocationBar(getLocation: (location) {
                            address=location;
                          },width: screenWidth,
                          choosenLocation: null,),

                      CustomTextField(
                        inputKey: const Key("profile_phone"),
                        controller: phoneNumber,
                        labelText: "Phone Number",
                        prefixIcon: Icons.phone,
                        validator: phoneNumberValidator,
                      ),
                      CustomTextField(
                        inputKey: const Key("profile_age"),
                        controller: age,
                        labelText: "Age",
                        prefixIcon: Icons.calendar_month,
                        validator: ageValidator,
                      ),
                      CustomTextField(
                        inputKey: const Key("profile_budget"),
                        controller: budget,
                        labelText: "Budget",
                        prefixIcon: Icons.money,
                        validator: budgetValidator,
                      ),
                      CustomTextField(
                        inputKey: const Key("profile_job"),
                          controller: jobStatus,
                          labelText: "Job Status",
                          prefixIcon: Icons.cases),
                      SizedBox(
                        height: 20,
                      ),
                      CustomDropdownButton(
                        initalSelection: null,
                        key: Key("profile_religion"),
                        items: ProfilePageStrings.religionItems,
                        value: religion,
                        hintText: "Choose Religion",
                        onChanged: (String? newValue) {
                          religion = newValue;
                        },
                      ),
                      SizedBox(
                        height: 10,
                      ),
                      CustomDropdownButton(
                        initalSelection: null,
                        key: Key("gender_dropdown"),
                        leadIcon: Icons.note_alt_sharp,
                        hintText: "Choose your gender",
                        header: "Gender",
                        items: ProfilePageStrings.genderItems,
                        value: gender,
                        onChanged: (newValue) {
                          gender = newValue!;
                        },
                      ),
                      CustomDropdownButton(
                        initalSelection: null,
                        key: Key("profile_religious_similarity"),
                        leadIcon: Icons.note_alt_sharp,
                        hintText: "",
                        header:
                            "Are you comfortable living with someone of a different religion?",
                        items: ProfilePageStrings.religiousSimilarityItems,
                        value: religiousSimilarity,
                        onChanged: (newValue) {
                          religiousSimilarity = newValue!;
                        },
                      ),
                      CustomDropdownButton(
                        initalSelection: null,
                        key: Key("smoking"),
                        leadIcon: Icons.note_alt_sharp,
                        header:
                            "Do you smoke or are you okay with living with someone who does?",
                        items: ProfilePageStrings.smokingItems,
                        value: smoking,
                        hintText: "",
                        onChanged: (newValue) {
                          smoking = newValue!;
                        },
                      ),
                      CustomDropdownButton(
                        initalSelection: null,
                        key: Key("pet"),
                        leadIcon: Icons.note_alt_sharp,
                        header: "Are you pet-friendly?",
                        items: ProfilePageStrings.petItems,
                        value: pet,
                        hintText: "",
                        onChanged: (newValue) {
                          pet = newValue!;
                        },
                      ),
                      CustomDropdownButton(
                        initalSelection: null,
                        key: Key("punctuality"),
                        leadIcon: Icons.note_alt_sharp,
                        header:
                            "Can you tolerate roommates who arrive late for various reasons?",
                        items: ProfilePageStrings.privacyItems,
                        value: privacy,
                        hintText: "",
                        onChanged: (newValue) {
                          privacy = newValue!;
                        },
                      ),
                      CustomDropdownButton(
                        initalSelection: null,
                        key: Key("socialize"),
                        leadIcon: Icons.note_alt_sharp,
                        header: "How often do you socialize at home?",
                        items: ProfilePageStrings.socializeItems,
                        value: socialize,
                        hintText: "",
                        onChanged: (newValue) {
...
                      ),
                      SizedBox(
                        height: 20,
                      ),
                      
                      UploadImageButton(
                        key: Key("profile_id_upload"),
                            idImage: image2,
                            onPressed: () {
                          BlocProvider.of<IdImageBloc>(context).add(IdClicked());
                        },
                        listener: (context, state) {
                          if (state is IdSuccess) {
...
                        ),
                      ),
                      SizedBox(
                        height: 10,
                      ),
                      TextField(
                        key: Key("bio"),
                        maxLines: 4,
                        controller: bio,
                        decoration: InputDecoration(
                          contentPadding: EdgeInsets.only(top: 30),
                          hintStyle: TextStyle(
                              color: Colors.black, fontWeight: FontWeight.w100),
...
                      ),
                      SizedBox(
                        height: 20,
                      ),
                      Center(
                          child: SubmitButton(
                            buttonKey: const Key("profile_btn"),
                              bloc: BlocProvider.of<ProfileBloc>(context),
                              onPressed: () {
                                if (_formKey.currentState!.validate()) {
                                  print(address);
                                  BlocProvider.of<ProfileBloc>(context).add(
                                      ProfileEvent(
...
