class ProfilePageStrings {
  static const List<String> religionItems = [
    "Orthodox Christian",
    "Muslim",
    "Protestant",
    "Catholic",
    "Others"
  ];

  static const List<String> genderItems = [
    "Male",
    "Female",
  ];

  static const List<String> religiousSimilarityItems = [
    "Yes, I'm open-minded.",
    "No, I prefer to live with someone of the same religion.",
    "Yes, it doesn't matter to me."
  ];

  static const List<String> smokingItems = [
    "I smoke",
    "I don't smoke",
    "I'm okay with it",
  ];

  static const List<String> petItems = [
    "Yes, I love pets!",
    "No, I prefer not to live with pets.",
    "Yes, pets are okay.",
  ];

  static const List<String> privacyItems = [
    "Yes, I'm understanding.",
    "No, punctuality is important to me.",
    "Yes, I don't mind occasional lateness.",
  ];

  static const List<String> socializeItems = [
    "Often",
    "Occasionally",
    "Rarely",
  ];
}