...
                key: _formKey,
                child: Padding(
                  padding: EdgeInsets.only(left: 30, right: 30),
                  child: Column(
                    children: <Widget>[
                      CustomTextField(
                        inputKey: const Key("reg_fullname"),
                        controller: full_name,
                        labelText: "Full Name",
                        prefixIcon: Icons.person,
                        validator: nameValidator,
                      ),
                      CustomTextField(
                        inputKey: const Key("reg_username"),
                        controller: user_name,
                        labelText: "User Name",
                        prefixIcon: Icons.person,
                        validator: nameValidator,
                      ),
                      CustomTextField(
                        inputKey: const Key("reg_email"),
                        controller: email,
                        labelText: "Email",
                        prefixIcon: Icons.email,
                        validator: emailValidator,
                      ),
                      PasswordFormField(
                        inputKey: const Key("reg_password"),
                        controller: password,
                        labelText: "Password",
                        validator: passwordValidator,
                      ),
                      PasswordFormField(
                        inputKey: const Key("reg_password2"),
                        controller: repassword,
                        labelText: "RE-enter Password",
                        validator: (value) {
                          dynamic result =
                              repasswordValidator(value, password.text);
                          return result;
                        },
                      ),
                      SizedBox(
                        height: 50,
                      ),
                      SubmitButton(
                          buttonKey: const Key("register_btn"),
                          bloc: BlocProvider.of<RegBloc>(context),
                          onPressed: () {
                            if (_formKey.currentState!.validate()) {
                              BlocProvider.of<RegBloc>(context).add(RegEvent(
                                  full_name.text,
                                  user_name.text,
...
